// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IntensitySparkline Snapshot Tests should match snapshot with custom color 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGPath
        d="M 4,26.4 Q 32,26.4 60,22.56 Q 88,22.56 116,17.183999999999997"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294929259,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={116}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4294929259,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with typical intensity pattern 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGPath
        d="M 4,26.4 Q 13.333333333333334,26.4 22.666666666666668,22.56 Q 32,22.56 41.333333333333336,17.183999999999997 Q 50.66666666666667,17.183999999999997 60,11.1936 Q 69.33333333333334,11.1936 78.66666666666667,10.71744 Q 88,10.71744 97.33333333333334,14.366976000000001 Q 106.66666666666667,14.366976000000001 116,19.6667904"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4293673082,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={60}
        cy={7.199999999999999}
        fill={
          {
            "payload": 4293673082,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot without peak marker 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGPath
        d="M 4,26.4 Q 18,26.4 32,22.56 Q 46,22.56 60,17.183999999999997 Q 74,17.183999999999997 88,16.9536 Q 102,16.9536 116,20.701439999999998"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
